--- a/Personal Website/index.html
+++ b/Personal Website/index.html
@@ -5,13 +5,18 @@
 
 	<!-- Include local css files -->
     <link href="style.css" rel = "stylesheet" type ="text/css">
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.3.0/snap.svg-min.js"></script>
 </head>
 <body>
+	<canvas class="container" id="container" role="main"></canvas>
 	<p>Hello! My name is...</p>
 
 	<h1>Hung Q. Nguyen</h1>
 
-	<div class="circle"/>
+	<div class="circle"></div>
+    <hr/>
 
 	<div id="footer">
 		<a href="contact" class="button"> Contact Me!</a>
@@ -19,5 +24,9 @@
 		<p>&copy; Copyright 2015. All rights reserved.</p>
 	</div>
 
+	<div class="ball bottom"><canvas class="canvas" width="300px" height="500px" id="ballCanvasBottom"></canvas></div>
+	<div class="ball top"><canvas class="canvas" id="ballCanvasTop"></canvas></div>
+
+	<script language="JavaScript" type="text/javascript" src="script.js"></script>
 </body>
 </html>
